--- a/rails_projects/qanda/app/views/questions/index.html.erb
+++ b/rails_projects/qanda/app/views/questions/index.html.erb
@@ -15,6 +15,7 @@
     <td><%= question.name %></td>
     <td><%= question.content %></td>
     <td><%= link_to 'show', question_path(question) %></td>
+    <td><%= link_to 'edit', edit_question_path(question) %></td>
   </tr>
   <% end %>
 </table>
