Add: Answerコントローラーを作成 Add: 新規回答投稿機能の実装

--- a/rails_projects/qanda/app/views/questions/show.html.erb
+++ b/rails_projects/qanda/app/views/questions/show.html.erb
@@ -14,4 +14,18 @@
   <%= @question.content %>
 </p>
 
+<h2>Add a answer</h2>
+<%# 新しいAnswerオブジェクトが動的に生成される %>
+<%= form_with model: [@question, @question.answers.build] do |form| %>
+  <div>
+    <%= form.label :name %><br>
+    <%= form.text_field :name %>
+  </div>
+  <div>
+    <%= form.label :content %><br>
+    <%= form.text_area :content %>
+  </div>
+  <%= form.submit %>
+<% end %>
+
 <%= link_to 'top', questions_path %>
