--- a/rails_projects/qanda/app/views/questions/show.html.erb
+++ b/rails_projects/qanda/app/views/questions/show.html.erb
@@ -14,6 +14,18 @@
   <%= @question.content %>
 </p>
 
+<h2>Answers</h2>
+<% @question.answers.each do |answer| %>
+  <p>
+    Name:<br>
+    <%= answer.name %>
+  </p>
+  <p>
+    Content:<br>
+    <%= answer.content %>
+  </p>
+<% end %>
+
 <h2>Add a answer</h2>
 <%# 新しいAnswerオブジェクトが動的に生成される %>
 <%= form_with model: [@question, @question.answers.build] do |form| %>
